--- a/docs/steeringcommittee/index.Rmd
+++ b/docs/steeringcommittee/index.Rmd
@@ -15,38 +15,20 @@ header:
   image: 'header/blue-brain-banner.png'
 ---
 
-<<<<<<< HEAD
-| Name                   | Organisation                                                               | Weblink                                                                                                      |
-|--------------------|-----------------------|------------------------------|
-| Dr Mary Arden          | Bionics Institute                                                          | [Mary Ardren](https://www.bionicsinstitute.org/team-members/dr-mary-ardren/)                                 |
-| A/Prof Deborah Apthorp | University of New England                                                  | [Deborah Apthorp](https://www.deborahapthorp.com/)                                                           |
-| Dr Kristin Barry       | Research Fellow, University of Western Australia, School of Human Sciences | [Kristin Barry](https://research-repository.uwa.edu.au/en/persons/kristin-barry)                             |
-| Dr Katie Drummond      | The Florey                                                                 | [Katherine Drummond](https://florey.edu.au/researcher/katherine-drummond/)                    |
-| Dr Cynthia Forlini     | Deakin University                                                          | [Cynthia Forlini](https://www.deakin.edu.au/about-deakin/people/cynthia-forlini)                             |
-| Dr Barbora Fulopova    | University of Tasmania                                                     | [Barbora Fulopova](https://www.utas.edu.au/profiles/staff/health/barbora-fulopova)                           |
-| Dr Adam Hines          | QUT Centre for Robotics                                                    | [Adam Hines](https://research.qut.edu.au/qcr/people/adam-hines/)                                          |
-| Dr Scott Kiel-Chisholm | QUT                                                                        | [Scott Kiel-Chisholm](https://www.qut.edu.au/about/our-people/academic-profiles/s.kielchisholm)           |
-| Dr Sharn Perry         | University of Tasmania                                                     | [Sharn Perry](https://www.utas.edu.au/profiles/staff/health/sharn-perry)                                     |
-| Dr Felicia Reed        | Australian Eating Disorders Research and Translation Centre                | [Felicia Reed](https://www.eatingdisordersresearch.org.au/profile/dr-felicia-reed/)                          |
-| Dr Ronak Reshamwala    | Griffith University                                                        | [Ronak Reshamwala](<https://experts.griffith.edu.au/9352-ronak-reshamwala>)                                  |
-| Dr Louisa Selvadurai   | Monash University                                                          | [Louisa Selvadurai](https://research.monash.edu/en/persons/louisa-selvadurai)                              |
-| A/Prof Carolyn Semmler | University of Adelaide                                                     | [Carolyn Semmler](https://www.adelaide.edu.au/directory/carolyn.semmler)                                   |
-| Dr Annabel Short       | Telethon Kids Institute                                                    | [Annabel Short](https://www.telethonkids.org.au/contact-us/our-people/s/dr-annabel-short/) |
-| Dr Heidi Walkden       | Department of Veterans’ Affairs                                            | [Heidi Walkden](https://www.linkedin.com/in/heidiwalkden/)                                                 |
-=======
-
-
-| Name | Organisation | Weblink |
-|--------------------------|-----------------------------------|-----------------------------------------------|
-A/Prof Deborah  Apthorp	  | University of New England	| [Deborah Apthorp](https://www.deborahapthorp.com/)
-Dr Kristin Barry | Research Fellow, University of Western Australia, School of Human Sciences | [Kristin Barry](https://research-repository.uwa.edu.au/en/persons/kristin-barry)
-Dr Isabella Bower | Postdoctoral Research Fellow, Cognitive Ageing and Impairment Neurosciences (CAIN), Behaviour-Brain-Body Research Centre, UniSA Justice & Society | [Isabella Bower](mailto:Bella.Bower@unisa.edu.au)
-Dr Cynthia Forlini	| Deakin University	| [Cynthia Forlini](https://www.deakin.edu.au/about-deakin/people/cynthia-forlini)
-Dr Barbora Fulopova	| Queensland Brain Institute	| [Barbora Fulopova](https://qbi.uq.edu.au/profile/14713/barbora-fulopova)
-Dr Scott Kiel-Chisholm	| QUT	| [Scott Kiel-Chisholm](https://www.qut.edu.au/about/our-people/academic-profiles/s.kielchisholm)
-A/Prof Carolyn Semmler |	University of Adelaide |	[Carolyn Semmler](https://www.adelaide.edu.au/directory/carolyn.semmler)
-Dr Annabel Short | Telethon Kids Institute | [Annabel Short](mailto:annabel.short@telethonkids.org.au )
-Dr Elysia Sokolenko | Research Coordinator Discipline of Psychiatry; Lecturer Discipline of Anatomy and Pathology, Adelaide Medical School, The University of Adelaide | [Elysia Sokolenko](https://researchers.adelaide.edu.au/profile/elysia.sokolenko)
-Dr Heidi Walkden | Department of Veterans’ Affairs | [Heidi Walkden](https://www.linkedin.com/in/heidiwalkden/)
-
->>>>>>> refs/remotes/origin/master
+| Name                   | Organisation                                                               | Weblink                                                                                         |
+|------------------------|----------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------|
+| Dr Mary Arden          | Bionics Institute                                                          | [Mary Ardren](https://www.bionicsinstitute.org/team-members/dr-mary-ardren/)                    |
+| A/Prof Deborah Apthorp | University of New England                                                  | [Deborah Apthorp](https://www.deborahapthorp.com/)                                              |
+| Dr Kristin Barry       | Research Fellow, University of Western Australia, School of Human Sciences | [Kristin Barry](https://research-repository.uwa.edu.au/en/persons/kristin-barry)                |
+| Dr Katie Drummond      | The Florey                                                                 | [Katherine Drummond](https://florey.edu.au/researcher/katherine-drummond/)                      |
+| Dr Cynthia Forlini     | Deakin University                                                          | [Cynthia Forlini](https://www.deakin.edu.au/about-deakin/people/cynthia-forlini)                |
+| Dr Barbora Fulopova    | University of Tasmania                                                     | [Barbora Fulopova](https://www.utas.edu.au/profiles/staff/health/barbora-fulopova)              |
+| Dr Adam Hines          | QUT Centre for Robotics                                                    | [Adam Hines](https://research.qut.edu.au/qcr/people/adam-hines/)                                |
+| Dr Scott Kiel-Chisholm | QUT                                                                        | [Scott Kiel-Chisholm](https://www.qut.edu.au/about/our-people/academic-profiles/s.kielchisholm) |
+| Dr Sharn Perry         | University of Tasmania                                                     | [Sharn Perry](https://www.utas.edu.au/profiles/staff/health/sharn-perry)                        |
+| Dr Felicia Reed        | Australian Eating Disorders Research and Translation Centre                | [Felicia Reed](https://www.eatingdisordersresearch.org.au/profile/dr-felicia-reed/)             |
+| Dr Ronak Reshamwala    | Griffith University                                                        | [Ronak Reshamwala](https://experts.griffith.edu.au/9352-ronak-reshamwala)                       |
+| Dr Louisa Selvadurai   | Monash University                                                          | [Louisa Selvadurai](https://research.monash.edu/en/persons/louisa-selvadurai)                   |
+| A/Prof Carolyn Semmler | University of Adelaide                                                     | [Carolyn Semmler](https://www.adelaide.edu.au/directory/carolyn.semmler)                        |
+| Dr Annabel Short       | Telethon Kids Institute                                                    | [Annabel Short](https://www.telethonkids.org.au/contact-us/our-people/s/dr-annabel-short/)      |
+| Dr Heidi Walkden       | Department of Veterans’ Affairs                                            | [Heidi Walkden](https://www.linkedin.com/in/heidiwalkden/)                                      |
